--- a/BT1.ipynb
+++ b/BT1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "7143f8aa-1888-422f-acb0-205380602cfd",
    "metadata": {},
    "outputs": [
@@ -10,14 +10,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 36\n"
+      " 8\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "so gap doi cua n = 72\n"
+      "so gap doi cua n = 16\n"
      ]
     }
    ],
@@ -108,14 +108,46 @@
     "#4\n",
     "c = input()\n",
     "if c.isalpha():\n",
-    "    print(c,\"là kí tự alphabet\")\n",
+    "    print(c,'là kí tự alphabet')\n",
     "else:\n",
-    "    print(c,\"không phải là kí tự alphabet\")"
+    "    print(c,'không phải là kí tự alphabet')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
+   "id": "83e90717-5cb2-4816-8aa3-a785574aed7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "nhập chữ cái in hoa: P\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chữ cái thường liền trước: o\n"
+     ]
+    }
+   ],
+   "source": [
+    "#5\n",
+    "c = input('nhập chữ cái in hoa:')\n",
+    "if not (c.isalpha() and c.isupper()):\n",
+    "    print('đây không phải chữ in hoa')\n",
+    "elif c == 'A':\n",
+    "    print('chữ a không có chữ cái trước.')\n",
+    "else:\n",
+    "    print('chữ cái thường liền trước:', chr(ord(c.lower()) - 1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "9438436e-6837-44a0-adcb-ebb78382d39f",
    "metadata": {},
    "outputs": [
@@ -123,14 +155,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " -1 2 3\n"
+      " 6 7 8.8\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Khong phai 3 canh cua tam giac\n"
+      "diện tích tam giác: 20.9\n"
      ]
     }
    ],
@@ -141,14 +173,46 @@
     "p = (a+b+c)/2\n",
     "S = (p*(p-a)*(p-b)*(p-c))**0.5\n",
     "if a>0 and b>0 and c>0 and (a+b)>c and (a+c)>b and (b+c)>a:\n",
-    "    print(f\"{S:.1f}\") \n",
+    "    print('diện tích tam giác:', f\"{S:.1f}\") \n",
     "else:\n",
     "    print('Khong phai 3 canh cua tam giac')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 17,
+   "id": "237cf1ef-e346-4e0f-b7f0-e43a91dd17eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "chuỗi >=20 kí tự: abcdefghijklnmopwxyz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kí tự thứ 5: f\n",
+      "kí tự thứ 7: h\n"
+     ]
+    }
+   ],
+   "source": [
+    "#7\n",
+    "S = input('chuỗi >=20 kí tự:')\n",
+    "if len(S) < 20:\n",
+    "    print('chưa đủ 20 kí tự')\n",
+    "else: \n",
+    "    print('kí tự thứ 5:', S[4])\n",
+    "    print('kí tự thứ 7:', S[6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "99416040-a7c2-4938-a269-07d99e1fd4fe",
    "metadata": {},
    "outputs": [
@@ -156,48 +220,41 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Tên, chỉ số tháng trước, chỉ số tháng này Pham Xuan Toai 1020 1070\n"
+      "Tên, chỉ số tháng trước, chỉ số tháng này: Nguyen Xuan Hai 2000 2586\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Họ và tên: Pham Xuan Toai\n",
-      "Tiền phải trả là 107136\n"
+      "Họ và tên: Nguyen Xuan Hai\n",
+      "Tiền phải trả là: 1855505\n"
      ]
     }
    ],
    "source": [
-    "*a,b,c = input(\"Tên, chỉ số tháng trước, chỉ số tháng này\").split()\n",
+    "#8\n",
+    "*a,b,c = input(\"Tên, chỉ số tháng trước, chỉ số tháng này:\").split()\n",
     "a = \" \".join(a)\n",
     "b = int(b)\n",
     "c = int(c)\n",
-    "d = (c-b)*1.08\n",
-    "bac1=1984*d\n",
-    "bac2=2050*d\n",
-    "bac3=2380*d\n",
-    "bac4=2998*d\n",
-    "bac5=3350*d\n",
-    "bac6=3460*d\n",
-    "if 0<=(c-b)<=50:\n",
-    "    print('Họ và tên:', a)\n",
-    "    print('Tiền phải trả là', f'{bac1:.0f}')\n",
-    "elif 51<=(c-b)<=100:\n",
-    "    print('Họ và tên:', a)\n",
-    "    print('Tiền phải trả là', f'{bac2:.0f}')\n",
-    "elif 101<=(c-b)<=200:\n",
-    "    print('Họ và tên:', a)\n",
-    "    print('Tiền phải trả là', f'{bac3:.0f}')\n",
-    "elif 201<=(c-b)<=300:\n",
-    "    print('Họ và tên:', a)\n",
-    "    print('Tiền phải trả là', f'{bac4:.0f}')\n",
-    "elif 301<=(c-b)<=400:\n",
-    "    print('Họ và tên:', a)\n",
-    "    print('Tiền phải trả là', f'{bac5:.0f}')\n",
-    "elif 401<=(c-b):\n",
-    "    print('Họ và tên:', a)\n",
-    "    print('Tiền phải trả là', f'{bac6:.0f}')\n",
+    "d = (c-b)\n",
+    "if d <= 50:\n",
+    "        t = d * 1984\n",
+    "elif 51 <= d <= 100:\n",
+    "    t = (50 * 1984 + (d - 50) * 2050)*1.08\n",
+    "elif 101 <= d <= 200:\n",
+    "    t = (50 * 1984 + 50 * 2050 + (d - 100) * 2380)*1.08\n",
+    "elif 201<= d <= 300:\n",
+    "    t = (50 * 1984 + 50 * 2050 + 100 * 2380 + (d - 200) * 2998)*1.08\n",
+    "elif 301<= d <= 400:\n",
+    "    t = (50 * 1984 + 50 * 2050 + 100 * 2380 + 100 * 2998 + (d - 300) * 3350)*1.08\n",
+    "else:\n",
+    "    t = (50 * 1984 + 50 * 2050 + 100 * 2380 + 100 * 2998 + 100 * 3350 + (d - 400) * 3460)*1.08\n",
+    "print('Họ và tên:', a)\n",
+    "print('Tiền phải trả là:', f'{t:.0f}')\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "          \n",
